service/tests/requests/snapshots/cart/rejects_an_empty_cart_quote@cart.snap
---
source: tests/requests/cart.rs
expression: "(response.status_code(), response.text())"
---
(
    400,
    "{\"error\":\"One or more fields failed validation\",\"code\":\"validation_error\",\"details\":{\"items\":\"Field error\"}}",
)
