service/tests/requests/snapshots/cart/rejects_non_positive_cart_quantities@cart.snap
---
source: tests/requests/cart.rs
expression: "(response.status_code(), response.text())"
---
(
    400,
    "{\"error\":\"One or more fields failed validation\",\"code\":\"validation_error\",\"details\":{\"items[0].quantity\":\"Field error\"}}",
)
